@@ -1138,7 +1138,7 @@
     "feira": {
       "order": {
         "user-orders": "{{user}}'s trade Requests",
-        "public-orders": "Neighborhood trade Requests",
+        "public-orders": "Trade Requests",
         "no-user-orders": "This user does not have any trade requests at the moment.",
         "no-public-orders": "No one in the vicinity of the neighborhood is requesting trades at the moment.",
         "complete-order": "Accept trade",
@@ -1165,20 +1165,23 @@
         "add-item": "Add fertilizers",
         "add-estrelinhas": "Add stars",
         "add-award": "Add trade items",
+        "neighbor-trades": "### Neighborhood Requests",
+        "order-public-description": "**{{user}}** exchanging for {{awards}}",
         "add-award-description": "Adding both for the trade is not mandatory. If you prefer, you can add only one of the two.",
         "invalid-weight": "You entered an invalid weight. The maximum allowed is **{{limit}} Kg**",
         "invalid-estrelinhas": "You entered an invalid number of stars. The maximum allowed is **{{limit}} :star:**",
         "invalid-plant": "You entered an invalid plant type !",
         "poor-stars": "You don't have all those **stars** to add as a trade for the order!",
         "poor-items": "You don't have all those **fertilizers** to add as a trade for the order!",
-        "Order-placed": "Your trade request has been published! If a user accepts the trade, you can return here to redeem the plants.",
+        "order-placed": "Your trade request has been published! If a user accepts the trade, you can return here to redeem the plants.",
         "invalid-values": "You sent invalid values for the request!",
         "no-items": "You don't have enough plants to accept this trade.",
         "order-gone": "This trade request doesn't exists anymore!",
         "silo-full": "You cannot accept this trade because your silo is full.",
         "confirm-delete": "Are you really sure you wanna remove the request? You won't get any tems placed in the request. Only the prize in stars :star: will be returned.",
         "order-accepted": "You accepted the trade. The plants, items, and stars have been credited to your account.",
-        "order-description": "**neighbor:** {{user}}\n**Exchanging for:**\n{{awards}}",
+        "order-description": "**Exchanging for:**\n{{awards}}",
+        "no-plants": "No trades available",
         "order-award": "**{{amount}}{{metric}}** {{emoji}}",
         "order-deleted": "You removed the trade request from the air. If any star rewards existed, they have been returned to your account. Item and plant rewards have been discarded."
       },
