@@ -294,6 +294,8 @@
     "quality_2": "Premium"
   },
   "farm-items": {
-    "0": "Fertilizantes"
+    "0": "Fertilizantes",
+    "0-one": "Fertilizante",
+    "0-other": "Fertilizantes"
   }
 }
